cmake_minimum_required(VERSION 3.16)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_CXX_STANDARD 17
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO
  POSITION_INDEPENDENT_CODE True
  INTERPROCEDURAL_OPTIMIZATION False
)

set(QCDB_SEARCH qcDBSearch)

set(COMPONENT_KSEARCH kSearch)
set(COMPONENT_WINDEX windex)
set(COMPONENT_INDEXER indexer)
set(COMPONENT_KMONITOR kMonitor)

project(${QCDB_SEARCH})

#add_subdirectory(${COMPONENT_INDEXER})
add_subdirectory(${COMPONENT_WINDEX})
add_subdirectory(${COMPONENT_KSEARCH})
add_subdirectory(${COMPONENT_KMONITOR})